--- a/DemoAPI_Web/appsettings.json
+++ b/DemoAPI_Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    "DemoAPI":  "https://localhost:7001"
+  }
 }
